--- a/package.json
+++ b/package.json
@@ -1,38 +1,45 @@
 {
-    "name": "feedmail",
-    "version": "1.0.0",
-    "description": "",
-    "main": "main.js",
-    "scripts": {
-      "test": "cross-env NODE_ENV=development jest",
-      "start": "node ./main.js",
-      "start:dev": "cross-env NODE_ENV=development node ./main.js",
-      "start:pro": "cross-env NODE_ENV=production node ./main.js",
-      "start:watch": "nodemon cross-env NODE_ENV=development ./main.js"
-    },
-    "author": "",
-    "license": "MIT",
-    "dependencies": {
-      "@sendgrid/mail": "^6.5.4",
-      "config": "^3.3.0",
-      "cross-env": "^7.0.3",
-      "express": "^4.17.1",
-      "jsonschema": "^1.2.5",
-      "mailgun-js": "^0.22.0",
-      "mjml": "^4.6.2",
-      "mongodb": "^3.6.5",
-      "rss-parser": "^3.7.5",
-      "winston": "^3.2.1"
-    },
-    "devDependencies": {
-      "eslint": "^6.8.0",
-      "eslint-config-google": "^0.14.0",
-      "eslint-config-standard": "^14.1.0",
-      "eslint-plugin-import": "^2.20.1",
-      "eslint-plugin-node": "^11.0.0",
-      "eslint-plugin-promise": "^4.2.1",
-      "eslint-plugin-standard": "^4.0.1",
-      "jest": "^25.2.1"
-    }
+  "name": "mk62211feedmail",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "test": "cross-env NODE_ENV=development jest",
+    "start": "node ./main.js",
+    "start:dev": "cross-env NODE_ENV=development node ./main.js",
+    "start:pro": "cross-env NODE_ENV=production node ./main.js",
+    "start:watch": "nodemon cross-env NODE_ENV=development ./main.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MaciejKowalczyk98/testfeedmail.git"
+  },
+  "author": "Maciek",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MaciejKowalczyk98/testfeedmail/issues"
+  },
+  "homepage": "https://github.com/MaciejKowalczyk98/testfeedmail#readme",
+  "description": "",
+  "dependencies": {
+    "config": "^3.3.6",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.1",
+    "jsonschema": "^1.4.0",
+    "mailgun-js": "^0.22.0",
+    "mjml": "^4.9.1",
+    "mongodb": "^3.6.6",
+    "nodemon": "^2.0.7",
+    "rss-parser": "^3.12.0",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.25.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "jest": "^26.6.3"
   }
-  
+}
